<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_own_analysis"
        tools:context=".OwnAnalysisActivity" android:background="#0a000000">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="70dp" android:id="@+id/scrollView2"
            android:layout_marginTop="50dp" android:background="@color/common_google_signin_btn_text_dark_default">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:layout_marginTop="60dp">
            <TextView
                    android:text="@string/Q1text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Q1text"
                    tools:layout_editor_absoluteY="100dp" tools:layout_editor_absoluteX="32dp"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="40dp"
                    android:layout_marginBottom="20dp" android:layout_marginRight="40dp">
                <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/Q1_edit_num"
                        android:textSize="12sp"
                        android:hint="(例)  ５"
                        android:gravity="center_vertical|center_horizontal" android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat" android:maxLength="6"
                        tools:layout_editor_absoluteY="119dp" tools:layout_editor_absoluteX="56dp"
                        android:layout_margin="0dp"/>
                <TextView
                        android:text="回/週"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Q1edit_friquency"
                        tools:layout_editor_absoluteY="129dp" tools:layout_editor_absoluteX="106dp"
                        android:layout_margin="0dp"/>
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:id="@+id/Q2text"
                    android:textSize="14sp"
                    android:text="@string/Q2text"
                    tools:layout_editor_absoluteY="183dp" tools:layout_editor_absoluteX="32dp"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="40dp"
                    android:layout_marginBottom="20dp" android:layout_marginRight="40dp">
                <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/Q2_edit_num"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/Q2text"
                        android:maxLength="3" android:hint="(例)  23"
                        android:gravity="center_horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/Q2text"
                        android:layout_marginStart="24dp" android:singleLine="true" android:layout_margin="0dp"
                        android:layout_marginLeft="24dp"/>
                <Spinner
                        android:layout_height="wrap_content"
                        android:id="@+id/Q2_spinner"
                        android:entries="@array/txt_frequency_arr"
                        android:layout_width="wrap_content" tools:layout_editor_absoluteY="210dp"
                        tools:layout_editor_absoluteX="106dp" android:layout_margin="0dp"/>
            </LinearLayout>
            <TextView
                    android:text="@string/Q3text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Q3text"
                    tools:layout_editor_absoluteY="267dp" tools:layout_editor_absoluteX="32dp"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginLeft="40dp"
                    android:layout_marginBottom="20dp" android:layout_marginRight="40dp">
                <EditText
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/Q3_edit_num"
                        android:textSize="12sp"
                        android:hint="(例)  3" android:gravity="center_vertical|center_horizontal"
                        android:singleLine="true"
                        tools:layout_editor_absoluteY="286dp" tools:layout_editor_absoluteX="56dp"/>
                <TextView
                        android:text="回/日"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Q3edit_text"
                        tools:layout_editor_absoluteY="296dp" tools:layout_editor_absoluteX="106dp"/>
            </LinearLayout>
            <TextView
                    android:text="@string/Q4text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/Q4text" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/Q4_RadioGroup"
                    android:orientation="horizontal" android:paddingBottom="0dp" android:paddingLeft="0dp"
                    android:paddingRight="0dp" android:padding="0dp" android:paddingTop="0dp"
                    android:layout_marginLeft="40dp" android:layout_marginBottom="20dp"
                    android:layout_marginRight="40dp">
                <RadioButton
                        android:text="@string/ans__yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/Q4_yesButtom"
                        android:layout_weight="1" android:checked="false"/>
                <RadioButton
                        android:text="@string/ans_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/Q4_noButtom"
                        android:layout_weight="1" android:checked="false"/>
            </RadioGroup>
            <TextView
                    android:text="@string/Q5text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp" android:id="@+id/Q5text" android:layout_weight="1"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:orientation="horizontal"
                    android:layout_marginLeft="40dp" android:layout_marginBottom="20dp" android:id="@+id/Q5_RadioGroup"
                    android:layout_marginRight="40dp">
                <RadioButton
                        android:text="@string/ans__yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/Q5_yesButtom" android:layout_weight="1"
                        android:checked="false"/>
                <RadioButton
                        android:text="@string/ans_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/Q5_noButtom" android:layout_weight="1"
                        style="@style/Widget.AppCompat.CompoundButton.RadioButton" android:checked="false"/>
            </RadioGroup>
            <TextView
                    android:text="@string/Q6text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/Q6text" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/Q6_RadioGroup"
                    android:orientation="horizontal" android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp">
                <RadioButton
                        android:text="@string/ans__yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/Q6_yesButtom" android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/ans_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/Q6_noButtom" android:layout_weight="1"/>
            </RadioGroup>
            <TextView
                    android:text="@string/Q6edit_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/Q6_Edit_detali_text"
                    android:layout_marginLeft="60dp" android:layout_marginBottom="5dp"
                    android:layout_marginRight="60dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:id="@+id/Q6_edit_detail" android:layout_marginLeft="40dp"
                    android:layout_marginBottom="40dp" android:lines="7"
                    android:background="@drawable/textview_border" android:lineHeight="20dp"
                    android:inputType="textMultiLine" android:minLines="1" android:maxLength="200"
                    android:textSize="18sp"
                    android:layout_marginRight="40dp" android:layout_height="150dp"
                    android:gravity="start"
            />
            <TextView
                    android:text="@string/Q7text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/Q7text" android:layout_marginLeft="10dp"/>
            <TextView
                    android:text="@string/Q6edit_detail_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/Q7_Edit_text"
                    android:layout_marginLeft="60dp" android:layout_marginBottom="5dp"
                    android:layout_marginRight="60dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:ems="10"
                    android:id="@+id/Q7_edit_text" android:layout_marginLeft="40dp"
                    android:layout_marginBottom="40dp" android:lines="7"
                    android:background="@drawable/textview_border" android:lineHeight="20dp"
                    android:inputType="textMultiLine" android:minLines="1" android:maxLength="200"
                    android:textSize="18sp"
                    android:layout_marginRight="40dp" android:layout_height="150dp"
                    android:gravity="start"
            />
        </LinearLayout>
    </ScrollView>
    <Button
            android:text="保存"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/save_button"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="分析シート"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2" android:textSize="24sp"/>
</android.support.constraint.ConstraintLayout>