<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEdit_login"
            app:layout_constraintStart_toStartOf="@+id/emailEdit_login"
            app:layout_constraintEnd_toEndOf="@+id/emailEdit_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.62"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEdit_login"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="66dp" app:layout_constraintBottom_toTopOf="@+id/passwordEdit_login"/>
    <TextView
            android:text="@string/prompt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailLabel"
            app:layout_constraintBottom_toTopOf="@+id/emailEdit_login"
            app:layout_constraintStart_toStartOf="@+id/emailEdit_login"
            android:textSize="24sp" android:layout_marginBottom="5dp"/>
    <TextView
            android:text="@string/prompt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLabel" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit_login"
            app:layout_constraintBottom_toTopOf="@+id/passwordEdit_login" android:layout_marginBottom="5dp"/>
    <Button
            android:text="@string/action_sign_in_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signInButtom"
            android:layout_marginTop="54dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit_login"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit_login"
            app:layout_constraintEnd_toEndOf="@+id/passwordEdit_login"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit_login"
            app:layout_constraintEnd_toEndOf="@+id/passwordEdit_login"
            android:id="@+id/back_to_register"
            android:text="back" android:textSize="18sp" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/signInButtom"
    />
    <TextView
            android:text="Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.060000002"/>
</android.support.constraint.ConstraintLayout>